h2 in dialogs letter spacing and font-weight corrected

--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,8 @@ dialog {
     text-decoration: underline;
     text-decoration-color: #c6c7c8;
     text-underline-offset: 20px;
+    letter-spacing: 4px;
+    font-weight: 400;
   }
   > svg {
     width: 30px;
